--- a/css/style.css
+++ b/css/style.css
@@ -201,8 +201,7 @@ ul{
     letter-spacing: 0.72px;
     text-transform: capitalize;
     font-weight: 500;
-    padding-top: 120px;
-    margin-bottom: 72px;
+    margin-bottom: 8px;
 }
 .our-team-name{
     color: #2E2F42;
@@ -210,19 +209,15 @@ ul{
     line-height: 1.2;
     letter-spacing: 0.4px;
     font-weight: 500;
-    padding-top: 32px;
-    padding-bottom: 8px;
     display: flex;
     justify-content: center;
     text-align: center;
-    
-        
+    margin-bottom: 8px
 }
 .our-taem-dscr{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.32px;
-    padding-bottom: 32px;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -250,13 +245,13 @@ ul{
     letter-spacing: 0.72px;
     text-transform: capitalize;
     font-weight: 500;
-
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 .port-info-cont{
     padding: 32px 16px;
     border-top: none;
     margin-bottom: 8px;
+    border: 1px solid #e7e9fc;
 }
 .port-list-title{
     color: #2E2F42;
@@ -267,13 +262,13 @@ ul{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 32px 16px 8px 16px;
+    margin-bottom: 8px
 }
 .port-list-dscr{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.32px;
-    padding: 0px 16px 32px 16px;
+
     
 }
 .footer{
