--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ body{
 .container {
     width: 1158px;
     margin: 0 auto;
-    padding: 0 15px 0 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 img{
     display: block;
@@ -36,6 +37,7 @@ p{
 ul{
     list-style: none;
     margin: 0;
+    padding: 0;
 }
 .top-line {
     display: flex;  
@@ -167,17 +169,10 @@ ul{
 .dscr-list{
     display: flex;
     gap: 24px;
-    
-    justify-content: center;
-
-
 }
 .dscr-item{
-    width: calc((100% - 72px) / 4);
+    /* width: calc((100% - 72px) / 4); */
     flex-direction: column;
-    
-    
-
 }
 .sec-name{
     color: #2E2F42;
@@ -196,7 +191,7 @@ ul{
 .our-team{
     background: #F4F4FD;
     height: 732px;
-    padding: 120px 0 120px
+    padding: 120px 0 120px;
 }
 .card-container{
     display: flex;
@@ -206,7 +201,7 @@ ul{
 }
 .team-card{
     background: #FFF;
-    width:calc( (100% - 3 * 24px) / 4);
+    width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
     justify-content: space-between;
 }
@@ -254,7 +249,6 @@ ul{
 }
 
 .port-list{
-    
     background: #FFF;
    
 }
