--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
 }
 .container {
     width: 1158px;
-    margin:  auto;
+    margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -172,7 +172,7 @@ ul{
     gap: 24px;
 }
 .dscr-item{
-    /* width: calc((100% - 72px) / 4); */
+    width: calc((100% - 72px) / 4);
     flex-direction: column;
 }
 .sec-name{
@@ -202,7 +202,7 @@ ul{
 }
 .team-card{
     background: #FFF;
-    width: calc((100% - 72px) / 4);
+    /* width: calc((100% - 72px) / 4); */
     border-radius: 0px 0px 4px 4px;
     justify-content: space-between;
 }
