--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,15 @@ ul{
     padding: 188px 0 188px;
     height: 600px;
     flex-shrink: 0;
+    background-image:
+    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/maim-page/people-office\ 1.jpg);
+    background-repeat: no-repeat;
+    background-position: center ;
+    background-size: cover;
+    
+    
+   
 }
 .main-title{
     color: #FFF;
@@ -176,6 +185,21 @@ ul{
     width: calc((100% - 72px) / 4);
     flex-direction: column;
 }
+.dscr-icon-cont{
+    display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 112px;
+        border-radius: 4px;
+        border: 1px solid  #8E8F99;
+        background: #F4F4FD;
+        margin-bottom: 8px;
+}
+.dscr-icon{
+    width: 64px;
+    height: 64px;
+    box-sizing: border-box;
+}
 .sec-name{
     color: #2E2F42;
     font-size: 20px;
@@ -206,6 +230,8 @@ ul{
     /* width: calc((100% - 72px) / 4); */
     border-radius: 0px 0px 4px 4px;
     justify-content: space-between;
+    background:  #FFF;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .card-dscr{
     padding: 32px 0;
@@ -238,6 +264,44 @@ ul{
     display: flex;
     justify-content: center;
     text-align: center;
+}
+.social-link-list{
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+
+   
+}
+.social-link-item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    width: 40px;
+    height: 40px;
+    
+    
+}
+.social-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.social-link:hover,
+.social-link:focus {
+    background-color: #404bbf;
+}
+.social-link-icon{
+    fill: #F4F4FD;
+    width: 16px;
+    height: 16px;
 }
 .portfolio{
     padding: 120px 0 120px 0;
@@ -329,4 +393,71 @@ ul{
 display: inline-block;
 margin-bottom: 16px;
  
+}
+.footer-container{
+    display: flex;
+        align-items: baseline;
+}
+.footer-dscr-cont{
+    margin-right: 120px;
+}
+.footer-sociale-cont{
+    width: 208px;
+    display: block;
+    height: 80px;
+    flex-shrink: 0;
+    
+}
+.footer-social-link-list {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+
+
+}
+
+.footer-social-link-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    width: 40px;
+    height: 40px;
+
+
+}
+
+.footer-social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.footer-social-header{
+    color:  #FFF;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    margin-bottom: 16px;
+
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color:#31D0AA;
+}
+
+.footer-social-link-icon {
+    fill: #F4F4FD;
+    width: 24px;
+    height: 24px;
 }
