--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,11 @@ ul{
     height: 72px;
     align-items: center;
     flex-shrink: 0;
-    border-bottom: 1px solid #e7e9fc
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);;
+    
 }
 
 .header-container{
@@ -133,7 +137,7 @@ ul{
     flex-shrink: 0;
     background-image:
     linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-        url(../images/maim-page/people-office\ 1.jpg);
+        url(../images/maim-page/people-office.jpg);
     background-repeat: no-repeat;
     background-position: center ;
     background-size: cover;
@@ -169,6 +173,7 @@ ul{
     display: block;
     margin: auto;
     padding: 16px 32px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
     
 }
 .main-page-btn:hover,:focus{
