--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,34 @@
-body{
-    font-family: "Roboto", sans-serif;
-    color:#434455;
-    background-color: #FFF;
+:root {
+    --items: 4;
+    --row-gap: 48px;
+    --column-gap: 24px;
 }
+
+body {
+    color: #434455;
+    background-color: #FFFFFF;
+    background: var(--CLOUD, #ffffff);
+    font-family: 'Roboto', sans-serif;
+}
+
+ol,
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -10,459 +36,527 @@ body{
     margin: -1px;
     border: 0;
     padding: 0;
+
     white-space: nowrap;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-.container {
-    width: 1158px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-img{
-    display: block;
-}
-a{
+
+a {
     text-decoration: none;
-    color: inherit;
 }
-h1,h2,h3,h4{
-    margin: 0;
-    padding: 0;
+
+img {
+    display: block;
+    max-width: 100%;
+    /* width: 360px; */
+    height: auto;
 }
-p{
-    margin: 0;
-    padding: 0;
+
+.section {
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
-ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
+
+.container {
+    margin: 0 auto;
+    padding: 0 15px;
+    max-width: 1158px;
 }
-.top-line {
-    display: flex;  
-    height: 72px;
-    align-items: center;
-    flex-shrink: 0;
-    border-bottom: 1px solid #e7e9fc;
+
+.info {
+    position: fixed;
+    left: 0px;
+    bottom: 4px;
+    border: 1px solid;
+    display: block;
+    width: 100%;
+}
+
+/* header */
+.header {
+    position: sticky;
+    top: -1;
+    background: var(--WHITE, #FFF);
+    border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 1px 6px rgba(46, 47, 66, 0.08);;
-    
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.header-container{
+
+.header-container {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 0;
+    height: 72px;
 }
-.logo-cont{
-    color:#4D5AE5;
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-    font-weight: 700;
-    margin-right: 76px
 
-}
-.logo{
-    color:#2E2F42;
-
-}
-.logo-cont:hover,:focus{
-    color:#4D5AE5;
-    font-family:"Raleway",sans-serif;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-    font-weight: 700;
-}
-.nav-bar{
+.header-nav {
     display: flex;
     align-items: center;
 }
-.nav-list{
-    color: #2E2F42;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
-    display:flex;
+
+
+.nav-list {
+    display: flex;
     gap: 40px;
-   
-}
-.nav-list-link{
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
-.nav-list-item:hover,:focus{
-    color: #404BBF;    
-    font-size: 16px;    
-    line-height: 1.5;   
-    letter-spacing: 0.32px;
+.nav-list-link {
+    display: block;
+    position: relative;
+
+    font-size: 16px;
+    font-weight: 500;
+    color: #2e2f42;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    padding: 24px 0;
 }
-.contacts{
+
+/*main */
+.nav-list-link:hover,
+.nav-list-link:focus {
+    color: #404bbf;
+}
+
+.main {
+    color: #404bbf;
+}
+
+.nav-list-link.main::after,
+.nav-list-link:hover::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    color: #404bbf;
+    width: 100%;
+}
+
+/* contacts */
+.contacts-list {
+    display: flex;
+    gap: 40px;
+
+    font-style: normal;
+}
+
+.address-link,
+.contacts-list {
+
+
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
-    letter-spacing: 0.32px;
-    font-style: normal;
-    margin-left: 332px;
-    
-    
-}
-.contacts-list {
-    display: flex;
-    gap: 40px; 
-}
-.contacts-link:hover,:focus{
-    color:#404BBF;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
-}
-.contacts-link-item{
-    padding-top: 24px;
-    padding-bottom: 24px;
+    color: #434455;
+    letter-spacing: 0.02em;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.start-page{
-    background: #2E2F42;
-    padding: 188px 0 188px;
-    height: 600px;
-    flex-shrink: 0;
+.address-link:hover,
+.address-link:focus,
+.contacts-list:hover,
+.contacts-list:focus {
+    color: #404bbf;
+}
+
+.hero {
+    margin: 0 auto;
     background-image:
-    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/maim-page/people-office.jpg);
     background-repeat: no-repeat;
-    background-position: center ;
+    background-position: center;
+    background-color: #2e2f42;
     background-size: cover;
-    
-    
-   
 }
-.main-title{
-    color: #FFF;
+
+.hero-header {
+    color: var(--WHITE, #FFF);
     text-align: center;
+
+    font-family: Roboto;
     font-size: 56px;
+    font-weight: 700;
+    font-style: normal;
     line-height: 1.07;
-    letter-spacing: 1.12px;
-    display: flex;
-    align-items: center;
-    margin:0 auto;
+    letter-spacing: 0.02em;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 48px;
     max-width: 496px;
 }
-.main-page-btn{
-    background: #4D5AE5;
-    color: #FFF;
+
+.hero-button {
+    display: block;
+    cursor: pointer;
+    background-color: #4d5ae5;
+    color: #fff;
     font-size: 16px;
+    font-weight: 500;
     line-height: 1.5;
-    letter-spacing: 0.64px;
+    letter-spacing: 0.04em;
+    height: 56px;
+    min-width: 169px;
     border: none;
     border-radius: 4px;
-    cursor: pointer;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    min-width: 169px;
-    height: 56px;
-    display: block;
-    margin: auto;
-    padding: 16px 32px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
-    
+    margin-right: auto;
+    margin-left: auto;
+
+    transition:
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.main-page-btn:hover,:focus{
-    background : #404BBF;
+
+.hero-button:hover,
+.hero-button:focus {
+    background-color: #404BBF;
 }
-.description{
-    padding: 120px 0 120px;
+
+.benefits {
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
-.dscr-list{
+
+.benefits-items {
     display: flex;
     gap: 24px;
 }
-.dscr-item{
-    width: calc((100% - 72px) / 4);
-    flex-direction: column;
-}
-.dscr-icon-cont{
+
+
+.benefits-icon-box {
     display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 112px;
-        border-radius: 4px;
-        border: 1px solid  #8E8F99;
-        background: #F4F4FD;
-        margin-bottom: 8px;
+    justify-content: center;
+    align-items: center;
+
+    height: 112px;
+    border-radius: 4px;
+    border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+    background: var(--CLOUD, #F4F4FD);
+    margin-bottom: 8px;
+
 }
-.dscr-icon{
+
+.benefits-icon {
     width: 64px;
     height: 64px;
     box-sizing: border-box;
 }
-.sec-name{
-    color: #2E2F42;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.4px;
-    font-weight: 500;
-    align-items: flex-start;
-    margin-bottom: 8px;
-}
-.sec-dscr{
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
-}
-.our-team{
-    background: #F4F4FD;
-    height: 732px;
-    padding: 120px 0 120px;
-}
-.card-container{
-    display: flex;
-    gap: 24px;
-    justify-content: center;
-    padding-left: 0;
-}
-.team-card{
-    background: #FFF;
-    /* width: calc((100% - 72px) / 4); */
-    border-radius: 0px 0px 4px 4px;
-    justify-content: space-between;
-    background:  #FFF;
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
-.card-dscr{
-    padding: 32px 0;
-}
-.our-team-title{
-    color:#2E2F42;
-    text-align: center;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-    font-weight: 500;
-    margin-bottom: 72px;
-}
-.our-team-name{
-    color: #2E2F42;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.4px;
-    font-weight: 500;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin-bottom: 8px
-}
-.our-taem-dscr{
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-.social-link-list{
-    display: flex;
-    gap: 24px;
-    justify-content: center;
 
-   
+.social-links {
+    display: flex;
+    flex-shrink: 0;
+    justify-content: center;
+    gap: 24px;
 }
-.social-link-item{
+
+.footer-social-links {
+    gap: 16px;
+}
+
+.social-icon-box {
     display: flex;
     justify-content: center;
     align-items: center;
+
     border-radius: 50%;
     background-color: #4D5AE5;
     width: 40px;
     height: 40px;
-    
-    
 }
-.social-link{
+
+.social-link {
     display: flex;
     align-items: center;
     justify-content: center;
+
     width: 100%;
     height: 100%;
     background-color: #4d5ae5;
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
+
 .social-link:hover,
 .social-link:focus {
     background-color: #404bbf;
 }
-.social-link-icon{
-    fill: #F4F4FD;
-    width: 16px;
+
+.social-icon {
+    width: 18px;
     height: 16px;
-}
-.portfolio{
-    padding: 120px 0 120px 0;
-}
-.port-list-container{
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
-    
-}
-
-.port-list{
-    background: #FFF;
-    width: calc((100% - 48px) / 3);
-   
-}
-.portfolio-title{
-    color: #2E2F42;
-    text-align: center;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-    font-weight: 500;
-    margin-bottom: 72px;
-}
-.port-info-cont{
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
-}
-.port-list-title{
-    color: #2E2F42;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.4px;
-    font-weight: 500;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 8px
-}
-.port-list-dscr{
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
-
-    
-}
-.footer{
-    background: #2E2F42;
-    height: 312px;
-    padding: 100px 0;
-}
-
-.footer-dscr{
-    color: #F4F4FD;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.32px; 
-    max-width: 264px
-    
-    
-}
-.footer-logo{
-    color: #F4F4FD;
-    padding: 0;
-}
-.footer-cont{
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
-    
-}
-.logo-cont-footer{
- color:#4D5AE5;
- font-family: "Raleway",
- sans-serif;
- font-size: 18px;
- line-height: 1.17;
- letter-spacing: 0.54px;
- text-transform: uppercase;
- font-weight: 700;
- display: inline-flex;
- height: 24px;
- align-items: center;
- flex-shrink: 0;
-display: inline-block;
-margin-bottom: 16px;
- 
-}
-.footer-container{
-    display: flex;
-        align-items: baseline;
-}
-.footer-dscr-cont{
-    margin-right: 120px;
-}
-.footer-sociale-cont{
-    width: 208px;
-    display: block;
-    height: 80px;
-    flex-shrink: 0;
-    
-}
-.footer-social-link-list {
-    display: flex;
-    gap: 16px;
-    justify-content: center;
-
-
-}
-
-.footer-social-link-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #4D5AE5;
-    width: 40px;
-    height: 40px;
-
-
+    fill: #F4F4FD;
 }
 
 .footer-social-link {
     display: flex;
     align-items: center;
     justify-content: center;
+
     width: 100%;
     height: 100%;
     background-color: #4d5ae5;
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color: #31D0AA;
+}
+
+
+.benefits-item {
+    width: calc((100% - 72px) / 4);
+}
+
+.benefits-item-header {
+    margin-bottom: 8px;
 
 }
-.footer-social-header{
-    color:  #FFF;
+
+.benefits-item-text {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+
+
+.team {
+    background-color: #F4F4FD;
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.team-header {
+    font-size: 36px;
+    font-weight: 500;
+    color: #2e2f42;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+}
+
+.team-items {
+    display: flex;
+    gap: 24px;
+}
+
+.team-item {
+    box-shadow:
+        0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+
+    background-color: #FFFFFF;
+
+    border-radius: 0px 0px 4px 4px;
+
+}
+
+.team-item-info {
+    text-align: center;
+    padding: 32px 0;
+}
+
+.team-item-header {
+    margin-bottom: 8px;
+
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    color: #2e2f42;
+    letter-spacing: 0.02em;
+}
+
+.team-item-text {
+
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+
+.portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+
+.portfolio-header {
+    font-size: 36px;
+    font-weight: 500;
+    color: #2e2f42;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+
+
+}
+
+.portfolio-items {
+    --items: 3;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+    column-gap: 12px;
+    row-gap: 48px;
+}
+
+.portfolio-item {
+    width: calc((100% - var(--column-gap) * (var(--items) - 1)) / var(--items));
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover {
+
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-item:hover .portfolio-img-overlay {
+    transform: translateY(0);
+}
+
+
+.portfolio-img {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-img-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    font-size: 16px;
+    color: #f4f4fd;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    background-color: #4d5ae5;
+    padding: 40px 32px;
+}
+
+
+
+
+.portfolio-item-info {
+    padding: 32px 16px;
+    border: 1px solid #E7E9FC;
+    border-top: none;
+}
+
+.portfolio-item-header {
+    font-size: 20px;
+    font-weight: 500;
+    color: #2e2f42;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+
+    margin-bottom: 8px;
+}
+
+.portfolio-item-text {
+    font-size: 16px;
+    font-weight: 400;
+    color: #434455;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+
+
+.footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #2e2f42;
+}
+
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-logo-box {
+    margin-right: 120px
+}
+
+.footer-logo-link {
+    display: inline-block;
+    margin-bottom: 16px;
+}
+
+.footer-logo-span {
+    color: #f4f4fd;
+}
+
+.footer-text {
+    max-width: 264px;
+    color: var(--CLOUD, #F4F4FD);
+
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+}
+
+text {
+    line-height: 1.5;
+    color: var(--CLOUD, #F4F4FD);
+    font-family: Raleway, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+
+.social-media-header {
+    color: var(--WHITE, #FFF);
+
+
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
-    letter-spacing: 0.32px;
+    letter-spacing: 0.02em;
+
     margin-bottom: 16px;
-
 }
 
-.footer-social-link:hover,
-.footer-social-link:focus {
-    background-color:#31D0AA;
+
+.logo {
+    font-size: 18px;
+    font-weight: 700;
+    font-family: Raleway, sans-serif;
+    color: var(--IRIS, #4D5AE5);
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
-.footer-social-link-icon {
-    fill: #F4F4FD;
-    width: 24px;
-    height: 24px;
+.header-logo {
+    margin-right: 76px;
 }
