--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,7 @@ img {
     background-position: center;
     background-color: #2e2f42;
     background-size: cover;
+    max-width: 1440px;
 }
 
 .hero-header {
