--- a/css/style.css
+++ b/css/style.css
@@ -562,3 +562,226 @@ text {
 .header-logo {
     margin-right: 76px;
 }
+/* modal-window */
+.backdrop{
+    background-color: rgba(46, 47, 66, 0.40);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center ;
+    transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+               visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* opacity: 0;
+    visibility: hidden;
+    pointer-events: none; */
+}
+.modal{
+    width: 408px;
+    min-height: 584px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #FCFCFC;  
+    padding: 24px;
+}
+.backdrop.is-open{
+    opacity:1;
+    visibility:visible;
+    pointer-events:initial;
+    
+}
+.modal-btn{
+    margin-left: auto;
+    display: flex;
+    left: 24px;
+    width: 24px;
+    height: 24px;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+
+}
+.modal-btn:hover,
+.modal-btn:focus{
+   background-color: #404BBF;
+}
+.modal-btn:hover .modal-icon,
+.modal-btn:focus .modal-icon {
+    fill: #FFFFFF;
+}
+.modal-caption{
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: center;
+        letter-spacing: 0.02em;
+        color: #2E2F42;
+        margin-top: 24px;
+        margin-bottom: 16px;
+
+}
+.modal-icon{
+    box-sizing: border-box;
+}
+.form-item{
+    margin-bottom: 8px;
+}
+.form-lable{
+    color:  #8E8F99;
+        font-family: Roboto;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 14px;
+        letter-spacing: 0.48px;
+        display: block;
+        margin-bottom: 4px;
+}
+.form-item{
+    position: relative;
+}
+.form-input{
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+    padding-left:34px;
+    border: 1px solid  rgba(46, 47, 66, 0.40);  
+    outline: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus{
+    border-color: #4D5AE5;
+}
+.form-input:focus+.form-icon{
+    fill: #4D5AE5;
+}
+.form-icon{
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform:translateY(-50%) ;
+    stroke: #2E2F42;
+}
+.form-user-comment{
+    width: 100%;
+    resize: vertical;
+    max-height: 120px;
+    border-radius: 4px;
+    padding: 8px 16px;
+    outline: none;
+    border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40)); 
+}
+.form-user-comment:focus{
+    border-color: #4D5AE5;
+}
+.form-user-comment::placeholder{
+    color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+    
+        /* Small Text */
+        font-family: Roboto;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 14px;
+        /* 116.667% */
+        letter-spacing: 0.48px;
+}
+.modal-send-btn{
+    display: block;
+    padding: 16px 32px;
+    width: 169px;
+    gap: 10px;
+    border-radius: 4px;
+    background: var(--IRIS, #4D5AE5);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    border: none;
+    color: var(--WHITE, #FFF);
+    text-align: center;
+    font-size: 16px; 
+    font-weight: 500;
+    line-height: 24px; 
+    letter-spacing: 0.64px;
+    cursor: pointer;
+    margin: auto;
+}
+.modal-send-btn:focus,
+.modal-send-btn:hover{
+    border-radius: 4px;
+    background: var(--OCEAN, #404BBF);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+/* footer-form */
+.form-subscribe{
+    display: flex;
+    gap:24px;
+    align-items: center;
+}
+.footer-form{
+    margin-left: auto;
+    align-items: center;
+   
+    
+}
+.footer-fotm-cap{
+    color: var(--WHITE, #FFF);
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    margin-bottom: 16px;
+}
+.subscribe-form-btn{
+    display: inline-flex;
+    padding: 8px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    border-radius: 4px;
+    background: var(--IRIS, #4D5AE5);   
+    border: none;
+    color: var(--WHITE, #FFF);
+    text-align: center;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.64px;
+    cursor: pointer;
+}
+.subscribe-form-btn:hover,
+.subscribe-form-btn:focus{
+    border-radius: 4px;
+    background: var(--OCEAN, #404BBF);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.subscribe-form-input{
+    width: 264px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid var(--WHITE, #FFF);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background: transparent;
+    outline: none;
+    padding-left: 16px;
+    color: var(--WHITE, #FFF);
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.48px;
+}
+.subscribe-form-input::placeholder{
+    color:#FFF  ;
+}
+.subscribe-form-icon{
+    fill  : #FFFFFF;
+}
