--- a/css/style.css
+++ b/css/style.css
@@ -603,8 +603,8 @@ text {
 }
 .modal-btn{
     position: absolute;
-    /* margin-left: auto;
-    display: flex; */
+    
+    display: flex; 
     top: 24px;
     right: 24px;
     width: 24px;
@@ -658,7 +658,7 @@ text {
         margin-bottom: 4px;
         background-color: transparent;
         outline: transparent;
-        padding-left: 38px;
+        /* padding-left: 38px; */
 }
 .form-item{
     position: relative;
@@ -667,7 +667,7 @@ text {
     width: 100%;
     height: 40px;
     border-radius: 4px;
-    padding-left:38px;
+    /* padding-left:38px; */
     border: 1px solid  rgba(46, 47, 66, 0.40);  
     background-color: transparent;
     outline: transparent;
@@ -725,7 +725,7 @@ text {
 .modal-send-btn{
     display: block;
     padding: 16px 32px;
-    width: 169px;
+    max-width: 169px;
     gap: 10px;
     border-radius: 4px;
     background: var(--IRIS, #4D5AE5);
@@ -739,6 +739,7 @@ text {
     letter-spacing: 0.64px;
     cursor: pointer;
     margin: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-send-btn:focus,
 .modal-send-btn:hover{
