--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,7 @@ text {
     width: 100%;
     height: 40px;
     border-radius: 4px;
-    /* padding-left:38px; */
+    padding-left:38px;
     border: 1px solid  rgba(46, 47, 66, 0.40);  
     background-color: transparent;
     outline: transparent;
