--- a/css/style.css
+++ b/css/style.css
@@ -733,7 +733,7 @@ text {
         letter-spacing: 0.48px;
 }
 
-/* ========= modal-send-btn ======================== */
+/* ========= modal-send-btn ================================================== */
 .modal-send-btn{
     display: block;
     padding: 16px 32px;
@@ -760,7 +760,7 @@ text {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
-/* footer-form */
+/*============== footer-form ==================================================== */
 .form-subscribe{
     display: flex;
     gap:24px;
